changed colour of the body

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    color: #222222;
+    color:#C1E6FF;
     font-size: 1em;
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
