--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    color:#D2F6FC;
+    background-color:#D2F6FC;
     font-size: 1em;
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
