--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     font-size: 1.2em;
     font-weight: bold;
     margin: 2em 0 1em 0;
-    color: rgb(0, 0, 0);
+    color: #132743;
 }
 
 section > h1 {
