--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 2em;
+    
 }
 
 .details > p {
@@ -55,6 +56,9 @@ body {
 
 section > h1 {
     margin-top: 2em;
+}
+section{
+  background-color: #C1E6FF;
 }
 
 #footer {
